# qt_ludo

./: .clangd  .gitignore  CMakeLists.txt  README.md  buildGame  cleanRebuild  defaultMap.map  makeGame  runTests
.cache/clangd/index/: GameOpenGLWidget.cpp.FBE9FA7CB0BC5DBF.idx  GameOpenGLWidget.h.190F8570FA0117CA.idx  GameWidget.cpp.C80489CA93F70DCC.idx  GameWidget.h.550F16EDB9D73828.idx  MainWindow.cpp.96F8CBD548982451.idx  MainWindow.h.6F004401337B154F.idx  Menu.cpp.40E04E7E6DA315A9.idx  Menu.h.018970E2649F278E.idx  ModelUtil.cpp.A2AAE34C9C04315F.idx  ModelUtil.h.033F02BD13EF4B10.idx  PauseMenuWidget.cpp.347404C88F273CCB.idx  PauseMenuWidget.h.43B5955E06B9125F.idx  Window.cpp.4000442D69C042B7.idx  Window.h.4599C98BF4A4F5DA.idx  main.cpp.59A6C830739C3D07.idx
scripts/: makeGame.py  runTests.py
shaders/: frag.glsl  vert.glsl
src/: Camera.cpp  Camera.h  GLGameObject.cpp  GLGameObject.h  Game.cpp  Game.h  GameOpenGLWidget.cpp  GameOpenGLWidget.h  GameWidget.cpp  GameWidget.h  HUD.ui  HUDWidget.cpp  HUDWidget.h  Ludo.h  MainWindow.cpp  MainWindow.h  Map.cpp  Map.h  Menu.cpp  Menu.h  Menu.ui  ModelUtil.cpp  ModelUtil.h  PauseMenuWidget.cpp  PauseMenuWidget.h  PauseMenuWidget.ui  Players.cpp  Players.h  State.cpp  State.h  Window.cpp  Window.h  defaultMap.cpp  defaultMap.h  main.cpp  map_test.cpp  rng_test.cpp  util.cpp  util.h
test_util/: LudoTesting.cpp  LudoTesting.h
